dependencies/kustomization-client-side/prometheus-operator/patches/prometheus-k8s-allow-kaiwo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-k8s
  namespace: monitoring
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kaiwo-system
      podSelector:
        matchLabels:
          app.kubernetes.io/managed-by: kustomize
          app.kubernetes.io/name: kaiwo
          control-plane: kaiwo-controller-manager
    ports:
    - protocol: TCP
      port: 9090
    - protocol: TCP
      port: 8080
